comlited swagger documentation
