# pkg/handlers/item.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"fmt"
 	"net/http"
 	"strconv"
 
@@ -15,8 +16,8 @@ import (
 // @ID create-item
 // @Accept  json
 // @Produce  json
-// @Param list_id body int true "List Id"
-// @Param input body todo.TodoItem true "item info"
+// @Param list_id path int true "List Id"
+// @Param input body todo.TodoItemCreateUpdate true "item info"
 // @Success 200 {integer} integer 1
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
@@ -75,6 +76,7 @@ func (h *Handler) getAllItems(c *gin.Context) {
 	}
 
 	listId, err := strconv.Atoi(c.Param("list_id"))
+	fmt.Print("listId: ", listId)
 	if err != nil {
 		newErrorResponse(c, http.StatusBadRequest, "invalid list_id param")
 		return
@@ -126,27 +128,20 @@ func (h *Handler) getItemById(c *gin.Context) {
 
 }
 
-func (h *Handler) deleteItem(c *gin.Context) {
-	userId, err := getUserId(c)
-	if err != nil {
-		return
-	}
-
-	itemId, err := strconv.Atoi(c.Param("item_id"))
-	if err != nil {
-		newErrorResponse(c, http.StatusBadRequest, "invalid item_id param")
-		return
-	}
-
-	err = h.services.TodoItem.Delete(userId, itemId)
-	if err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	c.JSON(http.StatusOK, statusResponce{Status: "ok"})
-}
-
+// @Summary Update todo item
+// @Security ApiKeyAuth
+// @Tags items
+// @Description update todo item
+// @ID update-item
+// @Accept  json
+// @Produce  json
+// @Param item_id path int true "Item Id"
+// @Param input body todo.TodoItemCreateUpdate true "item info"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/{item_id} [put]
 func (h *Handler) updateItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -171,4 +166,38 @@ func (h *Handler) updateItem(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, statusResponce{"ok"})
+}
+
+// @Summary Delete Item
+// @Security ApiKeyAuth
+// @Tags items
+// @Description delete item
+// @ID delete-item
+// @Accept  json
+// @Produce  json
+// @Param item_id path int true "Item Id"
+// @Success 200 {string} string ok
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/{item_id} [delete]
+func (h *Handler) deleteItem(c *gin.Context) {
+	userId, err := getUserId(c)
+	if err != nil {
+		return
+	}
+
+	itemId, err := strconv.Atoi(c.Param("item_id"))
+	if err != nil {
+		newErrorResponse(c, http.StatusBadRequest, "invalid item_id param")
+		return
+	}
+
+	err = h.services.TodoItem.Delete(userId, itemId)
+	if err != nil {
+		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, statusResponce{Status: "ok"})
 }
